Update Unsupervised Learning - Project.ipynb

--- a/ml-project-unsupervised-learning/Unsupervised Learning - Project.ipynb
+++ b/ml-project-unsupervised-learning/Unsupervised Learning - Project.ipynb
@@ -1088,7 +1088,7 @@
     "# add cluster assignments to the original data\n",
     "new_df['Cluster'] = kmeans.labels_\n",
     "\n",
-    "# Calculate mean values of features per cluster\n",
+    "# calculate mean values of features per cluster\n",
     "cluster_means = new_df.groupby('Cluster')[features].mean()\n",
     "print(\"Cluster Centers (mean values):\\n\", cluster_means)"
    ]
